--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
 		}
 	  },
 	"require": {
-    "composer/installers": "~2.0.0"
+		"composer/installers": "1.9.0"
 	},
 	"require-dev": {
     "wp-cli/i18n-command": "2.2.9"
