--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "awesome-application-form",
-	"title": "Application Form Plugin For WordPress.",
-  "version": "1.0.4",
+  "title": "Application Form Plugin For WordPress.",
+  "version": "1.0.0",
   "homepage": "https://wordpress.org/plugins",
   "license": "GPL-3.0+",
   "main": "Gruntfile.js",
@@ -11,28 +11,29 @@
   },
   "devDependencies": {
     "autoprefixer": "~9.5.0",
-    "grunt": "^1.0.4",
-    "grunt-contrib-compress": "~1.4.3",
+    "grunt": "^1.5.3",
+    "grunt-contrib-compress": "^1.5.0",
     "grunt-contrib-concat": "~1.0.1",
     "grunt-contrib-cssmin": "~3.0.0",
-    "grunt-contrib-jshint": "~1.1.0",
+    "grunt-contrib-jshint": "^3.2.0",
     "grunt-contrib-uglify": "~4.0.0",
-    "grunt-contrib-watch": "~1.0.0",
-    "grunt-phpcbf": "^0.1.1",
+    "grunt-contrib-watch": "^1.1.0",
     "grunt-phpcs": "^0.4.0",
     "grunt-postcss": "~0.9.0",
     "grunt-rtlcss": "~2.0.1",
-    "grunt-sass": "~3.0.0",
-    "grunt-stylelint": "~0.8.0",
-    "node-sass": "^4.14.1"
+    "grunt-sass": "3.1.0",
+    "grunt-stylelint": "^0.18.0",
+    "stylelint": "~14.1.0"
   },
   "engines": {
-    "node": ">=0.8.0",
-    "npm": ">=1.1.0"
+    "node": ">=8.9.3",
+    "npm": ">=5.5.1"
   },
   "description": "=== Application Form Plugin For WordPress  === Requires at least: 4.0 Tested up to: 5.6 Stable tag: 1.0.0 License: GPLv3 License URI: http://www.gnu.org/licenses/gpl-3.0.html",
   "author": "",
   "dependencies": {
-    "grunt-cli": "~1.4.3"
+    "grunt-cli": "~1.4.3",
+    "node-sass": "^6.0.1",
+    "wp-cli": "^0.0.5"
   }
 }
