--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
   "description": "=== Application Form Plugin For WordPress  === Requires at least: 4.0 Tested up to: 5.6 Stable tag: 1.0.0 License: GPLv3 License URI: http://www.gnu.org/licenses/gpl-3.0.html",
   "author": "",
   "dependencies": {
-    "grunt-cli": "~1.4.3",
+    "grunt-cli": "^1.4.3",
     "node-sass": "^6.0.1",
     "wp-cli": "^0.0.5"
   }
